<resources>
    <string name="app_name">PageAccueil</string>
    <string name="alpes">Alpes</string>
    <string name="atlantique">Atlantique</string>
    <string name="paris">Paris</string>
    <string name="c_te_d_azur">Côte d\'Azur</string>
    <string name="retour">Retour</string>
    <string name="Matin">Matin</string>
    <string name="carte">carte</string>

    <string-array name="Jours">
        <item>Jour1</item>
        <item>Jour2</item>
        <item>Jour3</item>
    </string-array>
</resources>

