<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/destination"
    >


    <Button
        android:id="@+id/btn_Alpes"
        android:layout_width="152dp"
        android:layout_height="84dp"
        android:background="@drawable/bouton_rond"
        android:fontFamily="@font/aclonica"
        android:text="@string/alpes"
        android:textColor="#FBFBFB"
        android:textSize="17sp"
        app:backgroundTint="#FF443a"
        app:layout_constraintBottom_toTopOf="@+id/btn_cotedazur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <Button
        android:id="@+id/btn_Atlantique"
        android:layout_width="152dp"
        android:layout_height="84dp"
        android:background="@drawable/bouton_rond"
        android:fontFamily="@font/aclonica"
        android:text="@string/atlantique"
        android:textColor="#FBFBFB"
        android:textSize="15sp"
        app:backgroundTint="#FF443a"
        app:layout_constraintBottom_toTopOf="@+id/btn_cotedazur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <Button
        android:id="@+id/btn_paris"
        android:layout_width="152dp"
        android:layout_height="84dp"
        android:layout_marginBottom="224dp"
        android:background="@drawable/bouton_rond"
        android:fontFamily="@font/aclonica"
        android:text="@string/paris"
        android:textColor="#FBFBFB"
        android:textSize="17sp"
        app:backgroundTint="#FF443a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Alpes"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_cotedazur"
        android:layout_width="152dp"
        android:layout_height="84dp"
        android:layout_marginBottom="224dp"
        android:background="@drawable/bouton_rond"
        android:fontFamily="@font/aclonica"
        android:text="@string/c_te_d_azur"
        android:textColor="#FBFBFB"
        android:textSize="17sp"
        app:backgroundTint="#FF443a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/texte_chxdest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/carter_one"
        android:text="Choix destination"
        android:textColor="#500E1B"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


