<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_jours3"
        android:layout_width="339dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/btn_retour_alpes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours3"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/texte_alpes"
        android:layout_width="47dp"
        android:layout_height="29dp"
        android:text="@string/alpes"
        app:layout_constraintBottom_toTopOf="@+id/spinner_jours3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/text_matin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="165dp"
        android:text="@string/Matin"
        app:layout_constraintBottom_toBottomOf="@+id/cadre_matni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner_jours3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_aprem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Après-midi"
        app:layout_constraintBottom_toTopOf="@+id/cadre_aprem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadre_matni" />

    <TextView
        android:id="@+id/cadre_matni"
        android:layout_width="357dp"
        android:layout_height="143dp"
        android:layout_marginTop="96dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours3" />

    <TextView
        android:id="@+id/cadre_aprem"
        android:layout_width="347dp"
        android:layout_height="143dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/btn_retour_alpes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadre_matni"
        app:layout_constraintVertical_bias="0.715" />

    <Button
        android:id="@+id/btn_carte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours3"
        app:layout_constraintVertical_bias="0.943" />

</androidx.constraintlayout.widget.ConstraintLayout>