<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/coteazur"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_jours4"
        android:layout_width="345dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_retour_coteazur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours4"
        app:layout_constraintVertical_bias="0.905" />

    <Button
        android:id="@+id/btn_carte_CoteAzur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours4"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/txt_matin_coteAzur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Matin"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours4"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/txt_aprem_coteAzur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Après-midi"
        android:textColor="#2196F3"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours4"
        app:layout_constraintVertical_bias="0.501" />

    <TextView
        android:id="@+id/texte_coteazur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_te_d_azur"
        android:textColor="#2196F3"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_jours4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/cadre_matin_coteAzur"
        android:layout_width="321dp"
        android:layout_height="139dp"
        android:layout_marginTop="80dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours4" />

    <TextView
        android:id="@+id/cadre_aprem_coteAzur"
        android:layout_width="321dp"
        android:layout_height="139dp"
        android:layout_marginTop="300dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours4" />

</androidx.constraintlayout.widget.ConstraintLayout>