<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/paris"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_jours"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_retour_paris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        app:backgroundTint="#FF443a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours"
        app:layout_constraintVertical_bias="0.934" />

    <Button
        android:id="@+id/btn_carte_Paris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carte"
        app:backgroundTint="#FF443a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours"
        app:layout_constraintVertical_bias="0.934" />


    <TextView
        android:id="@+id/texte_paris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:text="@string/paris"
        android:textColor="#500E1B"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_jours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_matin_Atlantique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Matin"
        android:textColor="#350A07"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/txt_aprem_atlantique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Après-midi"
        android:textColor="#040D15"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours"
        app:layout_constraintVertical_bias="0.475" />

    <TextView
        android:id="@+id/cadre_matin_Paris"
        android:layout_width="357dp"
        android:layout_height="143dp"
        android:layout_marginTop="96dp"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours" />

    <TextView
        android:id="@+id/cadre_aprem_Paris"
        android:layout_width="357dp"
        android:layout_height="143dp"
        android:layout_marginTop="304dp"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_retour_paris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours"
        app:layout_constraintVertical_bias="0.715" />


</androidx.constraintlayout.widget.ConstraintLayout>
