<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/atlantique"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_jours2"
        android:layout_width="313dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_retour_atlantique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        app:backgroundTint="#FF443a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours2"
        app:layout_constraintVertical_bias="0.932" />

    <Button
        android:id="@+id/btn_carte_Atlantique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carte"
        app:backgroundTint="#FF443a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours2"
        app:layout_constraintVertical_bias="0.932" />

    <TextView
        android:id="@+id/txt_matin_Atlantique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Matin"
        android:textColor="#01070C"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours2"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/txt_aprem_atlantique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Après-midi"
        android:textColor="#01070C"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours2"
        app:layout_constraintVertical_bias="0.455" />

    <TextView
        android:id="@+id/texte_atlantique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:text="@string/atlantique"
        android:textColor="#500E1B"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_jours2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <TextView
        android:id="@+id/cadre_matin_Atlantique"
        android:layout_width="321dp"
        android:layout_height="139dp"
        android:layout_marginTop="80dp"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours2" />

    <TextView
        android:id="@+id/cadre_aprem_Atlantique"
        android:layout_width="357dp"
        android:layout_height="143dp"
        android:layout_marginTop="276dp"
        android:text=""
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_retour_atlantique"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_jours2"
        app:layout_constraintVertical_bias="0.208" />

</androidx.constraintlayout.widget.ConstraintLayout>